--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd-mobile": "^5.37.1",
     "axios": "^1.7.7",
     "cra-template": "1.2.0",
+    "env-cmd": "^10.1.0",
     "mobx": "^6.13.3",
     "mobx-react-lite": "^4.0.7",
     "node-sass": "^7.0.3",
@@ -14,11 +15,16 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.0"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "env-cmd -f .env.local craco start",
+    "start:local": "env-cmd -f .env.local craco start",
+    "start:pro": "env-cmd -f .env.production craco start",
     "build": "craco build",
+    "build:local": "cross-env process.env.NODE_ENV=local craco build",
+    "build:pro": "cross-env process.env.NODE_ENV=production craco build",
     "test": "craco test",
     "eject": "craco eject"
   },
